--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="card">
         <!-- Image -->
         <img
-          src="/images/Music_Flatline.png"
+          src="images/Music_Flatline.png"
           alt="Girl Dancing in the moonlight"
           class="card-main-image"
         />
